--- a/test.html
+++ b/test.html
@@ -6,7 +6,14 @@
 </head>
 <body>
     <script>
-
+        function math (x){
+            while(x < 6){
+                var result = x * x**3 - x**3 + x;
+                console.log(result);
+                x= x + 1 
+            }
+        }
+        math(3)
     </script>
 </body>
 </html>
